--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-pagination": "^1.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.49.10",
